--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="col-md-12">
             <h5 class="sub-heading">Here's what to expect</h5>
             <h2 class="main-heading">
-              Emerse yourself into the world of cyber knowledg from a target perspective
+              Emerse yourself into the world of cyber knowledge from a target perspective
             </h2>
           </div>
           <div class="col-md-4">
@@ -433,7 +433,7 @@
           </div>
           <div class="col-md-3">
             <h3>Adress</h3>
-            <p>SecureNetAfrica head pffice Nairobi<br />Kenya</p>
+            <p>SecureNetAfrica head office Nairobi<br /> Kenya</p>
           </div>
           <div class="col-md-12">
             <p class="copyright">Copyright &copy; Wilson O. Julius 2023</p>
